--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CounterStrikeWeb
 @using CounterStrikeWeb.Models
+@using CounterStrikeWeb.Models.Players
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
