--- a/CounterStrikeWeb/Views/Home/Index.cshtml
+++ b/CounterStrikeWeb/Views/Home/Index.cshtml
@@ -1,8 +1,83 @@
-﻿@{
+﻿@model List<PlayerListingViewModel>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@{
+    var firstPlayer = Model.Any() ? Model[0] : null;
+    var secondPlayer = Model.Count > 1 ? Model[1] : null;
+    var thirdPlayer = Model.Count > 2 ? Model[2] : null;
+    var fourthPlayer = Model.Count > 3 ? Model[3] : null;
+    var fifthPlayer = Model.Count > 4 ? Model[4] : null;
+}
+
+@{
+    if (!Model.Any())
+    {
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to Counter-Strike Things</h1>
+            <p class="lead">Here you can find everything you need about Counter-Strike</p>
+            <hr class="my-4">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </div>
+    }
+}
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+        @if (firstPlayer != null)
+        {
+            <div class="carousel-item active">
+                <img src="@firstPlayer.Picture" class="d-block w-100" alt="@firstPlayer.Name - @firstPlayer.InGameName">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@firstPlayer.Id">@firstPlayer.Name - @firstPlayer.InGameName</a></h5>
+                </div>
+            </div>
+        }
+        @if (secondPlayer != null)
+        {
+            <div class="carousel-item">
+                <img src="@secondPlayer.Picture" class="d-block w-100" alt="@secondPlayer.Name - @secondPlayer.InGameName">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@secondPlayer.Id">@secondPlayer.Name - @secondPlayer.InGameName</a></h5>
+                </div>
+            </div>
+        }
+        @if (thirdPlayer != null)
+        {
+            <div class="carousel-item">
+                <img src="@thirdPlayer.Picture" class="d-block w-100" alt="@thirdPlayer.Name - @thirdPlayer.InGameName">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@thirdPlayer.Id">@thirdPlayer.Name - @thirdPlayer.InGameName</a></h5>
+                </div>
+            </div>
+        }
+        @if (fourthPlayer != null)
+        {
+            <div class="carousel-item">
+                <img src="@fourthPlayer.Picture" class="d-block w-100" alt="@fourthPlayer.Name - @fourthPlayer.InGameName">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@fourthPlayer.Id">@fourthPlayer.Name - @fourthPlayer.InGameName</a></h5>
+                </div>
+            </div>
+        }
+        @if (fifthPlayer != null)
+        {
+            <div class="carousel-item">
+                <img src="@fifthPlayer.Picture" class="d-block w-100" alt="@fifthPlayer.Name - @fifthPlayer.InGameName">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@fifthPlayer.Id">@fifthPlayer.Name - @fifthPlayer.InGameName</a></h5>
+                </div>
+            </div>
+        }
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
