--- a/CounterStrikeWeb/Views/Shared/_Layout.cshtml
+++ b/CounterStrikeWeb/Views/Shared/_Layout.cshtml
@@ -21,6 +21,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="Add">Add Player</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="All">Players</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Matches" asp-action="All">Matches</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="All">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Forum" asp-action="All">Forum</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
