--- a/CounterStrikeWeb/Views/Players/All.cshtml
+++ b/CounterStrikeWeb/Views/Players/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PlayerListingViewModel>
 
 @{
-    ViewData["Title"] = "All Players";
+    ViewData["Title"] = "Players";
 }
 
 <div class="row">
