--- a/CounterStrikeWeb/Views/Shared/_Layout.cshtml
+++ b/CounterStrikeWeb/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="All">Players</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Teams" asp-action="All">Teams</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Matches" asp-action="All">Matches</a>
                         </li>
                         <li class="nav-item">
