--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CounterStrikeWeb
 @using CounterStrikeWeb.Models
 @using CounterStrikeWeb.Models.Players
+@using CounterStrikeWeb.Models.Teams
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
