--- a/CounterStrikeWeb/Views/Teams/Add.cshtml
+++ b/CounterStrikeWeb/Views/Teams/Add.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Logo"></label>
-                    <input asp-for="Logo" class="form-control" placeholder="Picture URL">
+                    <input asp-for="Logo" class="form-control" placeholder="Logo URL">
                     <span asp-validation-for="Logo" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
