--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using CounterStrikeWeb.Models
 @using CounterStrikeWeb.Models.Players
 @using CounterStrikeWeb.Models.Teams
+@using CounterStrikeWeb.Models.Events
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
