--- a/CounterStrikeWeb/Views/Home/Index.cshtml
+++ b/CounterStrikeWeb/Views/Home/Index.cshtml
@@ -24,60 +24,186 @@
     }
 }
 
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-    <div class="carousel-inner">
-        @if (firstPlayer != null)
-        {
-            <div class="carousel-item active">
-                <img src="@firstPlayer.Picture" class="d-block w-100" alt="@firstPlayer.Name - @firstPlayer.InGameName">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@firstPlayer.Id">@firstPlayer.Name - @firstPlayer.InGameName</a></h5>
-                </div>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            box-sizing: border-box;
         }
-        @if (secondPlayer != null)
-        {
-            <div class="carousel-item">
-                <img src="@secondPlayer.Picture" class="d-block w-100" alt="@secondPlayer.Name - @secondPlayer.InGameName">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@secondPlayer.Id">@secondPlayer.Name - @secondPlayer.InGameName</a></h5>
-                </div>
-            </div>
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
         }
-        @if (thirdPlayer != null)
-        {
-            <div class="carousel-item">
-                <img src="@thirdPlayer.Picture" class="d-block w-100" alt="@thirdPlayer.Name - @thirdPlayer.InGameName">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@thirdPlayer.Id">@thirdPlayer.Name - @thirdPlayer.InGameName</a></h5>
-                </div>
-            </div>
+
+        .header {
+            
+            text-align: center;
+            background-color: hsla(50, 33%, 25%, .75);
+            color: white;
         }
-        @if (fourthPlayer != null)
-        {
-            <div class="carousel-item">
-                <img src="@fourthPlayer.Picture" class="d-block w-100" alt="@fourthPlayer.Name - @fourthPlayer.InGameName">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@fourthPlayer.Id">@fourthPlayer.Name - @fourthPlayer.InGameName</a></h5>
-                </div>
-            </div>
+
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
         }
-        @if (fifthPlayer != null)
-        {
-            <div class="carousel-item">
-                <img src="@fifthPlayer.Picture" class="d-block w-100" alt="@fifthPlayer.Name - @fifthPlayer.InGameName">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@fifthPlayer.Id">@fifthPlayer.Name - @fifthPlayer.InGameName</a></h5>
-                </div>
-            </div>
+
+            .navbar a {
+                float: left;
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 20px;
+                text-decoration: none;
+            }
+
+                .navbar a.right {
+                    float: right;
+                }
+
+                .navbar a:hover {
+                    background-color: #ddd;
+                    color: black;
+                }
+
+        .row {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         }
+
+        .side {
+            -ms-flex: 30%;
+            flex: 30%;
+            background-color: #f1f1f1;
+            padding: 20px;
+        }
+
+        .main {
+            -ms-flex: 70%;
+            flex: 70%;
+            background-color: white;
+            padding: 20px;
+        }
+
+        .fakeimg {
+            background-color: #aaa;
+            width: 100%;
+            padding: 20px;
+        }
+
+        .footer {
+            padding: 20px;
+            text-align: center;
+            background: #ddd;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="header">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner" role="listbox" style="max-width:1110px; max-height:500px !important;">
+                @if (firstPlayer != null)
+                {
+                    <div class="carousel-item active">
+                        <img src="@firstPlayer.Picture" class="d-block w-100" alt="@firstPlayer.Name - @firstPlayer.InGameName">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@firstPlayer.Id">@firstPlayer.Name - @firstPlayer.InGameName</a></h5>
+                        </div>
+                    </div>
+                }
+                @if (secondPlayer != null)
+                {
+                    <div class="carousel-item">
+                        <img src="@secondPlayer.Picture" class="d-block w-100" alt="@secondPlayer.Name - @secondPlayer.InGameName">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@secondPlayer.Id">@secondPlayer.Name - @secondPlayer.InGameName</a></h5>
+                        </div>
+                    </div>
+                }
+                @if (thirdPlayer != null)
+                {
+                    <div class="carousel-item">
+                        <img src="@thirdPlayer.Picture" class="d-block w-100" alt="@thirdPlayer.Name - @thirdPlayer.InGameName">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@thirdPlayer.Id">@thirdPlayer.Name - @thirdPlayer.InGameName</a></h5>
+                        </div>
+                    </div>
+                }
+                @if (fourthPlayer != null)
+                {
+                    <div class="carousel-item">
+                        <img src="@fourthPlayer.Picture" class="d-block w-100" alt="@fourthPlayer.Name - @fourthPlayer.InGameName">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@fourthPlayer.Id">@fourthPlayer.Name - @fourthPlayer.InGameName</a></h5>
+                        </div>
+                    </div>
+                }
+                @if (fifthPlayer != null)
+                {
+                    <div class="carousel-item">
+                        <img src="@fifthPlayer.Picture" class="d-block w-100" alt="@fifthPlayer.Name - @fifthPlayer.InGameName">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5><a class="btn btn-primary" asp-controller="Players" asp-action="Details" asp-route-id="@fifthPlayer.Id">@fifthPlayer.Name - @fifthPlayer.InGameName</a></h5>
+                        </div>
+                    </div>
+                }
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+
+    <div class="navbar">
+        <a class="nav-link" asp-area="" asp-controller="Players" asp-action="Add">Add Player</a>
+        <a class="nav-link" asp-area="" asp-controller="Teams" asp-action="Add">Add Team</a>
+        <a class="nav-link" asp-area="" asp-controller="Matches" asp-action="Add">Add Match</a>
+        <a class="nav-link" asp-area="" asp-controller="Events" asp-action="Add">Add Event</a>
+
+    </div>
+
+    <div class="row">
+        <div class="side">
+            <h2>About Me</h2>
+            <h5>Photo of me:</h5>
+            <div class="fakeimg" style="height:200px;">Image</div>
+            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <h3>More Text</h3>
+            <p>Lorem ipsum dolor sit ame.</p>
+            <div class="fakeimg" style="height:60px;">Image</div><br>
+            <div class="fakeimg" style="height:60px;">Image</div><br>
+            <div class="fakeimg" style="height:60px;">Image</div>
+        </div>
+        <div class="main">
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Dec 7, 2017</h5>
+            <div class="fakeimg" style="height:200px;">Image</div>
+            <p>Some text..</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <br>
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Sep 2, 2017</h5>
+            <div class="fakeimg" style="height:200px;">Image</div>
+            <p>Some text..</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <h2>Footer</h2>
+    </div>
+
+</body>
+</html>
