Implemented adding matches and visualizing them

--- a/CounterStrikeWeb/Views/Home/Index.cshtml
+++ b/CounterStrikeWeb/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
     <div class="navbar">
         <a class="nav-link" asp-area="" asp-controller="Players" asp-action="Add">Add Player</a>
         <a class="nav-link" asp-area="" asp-controller="Teams" asp-action="Add">Add Team</a>
-        <a class="nav-link" asp-area="" asp-controller="Matches" asp-action="Add">Add Match</a>
+        <a class="nav-link" asp-area="" asp-controller="Match" asp-action="Add">Add Match</a>
         <a class="nav-link" asp-area="" asp-controller="Events" asp-action="Add">Add Event</a>
 
     </div>
