--- a/CounterStrikeWeb/Views/Shared/_Layout.cshtml
+++ b/CounterStrikeWeb/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Teams" asp-action="All">Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Matches" asp-action="All">Matches</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Match" asp-action="All">Matches</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="All">Events</a>
