--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using CounterStrikeWeb.Models.Players
 @using CounterStrikeWeb.Models.Teams
 @using CounterStrikeWeb.Models.Events
+@using CounterStrikeWeb.Models.Match
+@using CounterStrikeWeb.Models.Matches
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
