--- a/CounterStrikeWeb/Views/Players/Details.cshtml
+++ b/CounterStrikeWeb/Views/Players/Details.cshtml
@@ -1,1 +1,46 @@
-﻿<h1>Details</h1>
+﻿@model PlayerDetailsViewModel
+
+@{
+    ViewData["Title"] = "Details";
+}
+
+
+<section class="py-5">
+    <div class="container">
+        <h1 style="margin: 2%; text-align: center;">Player</h1>
+        <div>
+            <div class="form-group text-center">
+                <img src=@Model.Picture class="img-fluid">
+            </div>
+            <div class="form-group">
+                <label for="startPoint">Name</label>
+                <input type="text" readonly class="form-control" id="startPoint" name="StartPoint" value="@Model.Name">
+            </div>
+            <div class="form-group">
+                <label for="endPoint">InGame Name</label>
+                <input type="text" readonly class="form-control" id="endPoint" name="EndPoint" value="@Model.InGameName">
+            </div>
+            <div class="form-group">
+                <label for="departureTime">Age</label>
+                <input type="number" readonly class="form-control" id="departureTime" value="@Model.Age">
+            </div>
+            <div class="form-group">
+                <label for="seats">Country</label>
+                <input type="text" readonly class="form-control" id="seats" name="Seats" value="@Model.Country">
+            </div>
+            <div class="form-group">
+                <label for="description">Twitter</label>
+                <input type="text" readonly class="form-control" id="description" name="Description" value="@Model.TwitterUrl">
+            </div>
+            <div class="form-group">
+                <label for="description">Instagram</label>
+                <input type="text" readonly class="form-control" id="description" name="Description" value="@Model.InstagramUrl">
+            </div>
+            <div class="form-group text-center">
+                <div class="button-holder">
+                    <a asp-controller="Players" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-primary btn-block text-uppercase">Join</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
