--- a/CounterStrikeWeb/Views/Teams/All.cshtml
+++ b/CounterStrikeWeb/Views/Teams/All.cshtml
@@ -1,12 +1,28 @@
-﻿@model IEnumerable<TeamListingViewModel>
+﻿@model AllTeamsQueryModel
 
 @{
     ViewData["Title"] = "Teams";
 }
 
+<form method="get">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="form-group">
+                <label asp-for="SearchTerm"></label>
+                <input asp-for="SearchTerm" class="form-control">
+            </div>
+
+            <div class="form-group col-md-3">
+                <input type="submit" class="btn btn-primary d-none" />
+            </div>
+
+        </div>
+    </div>
+</form>
+
 <div class="row">
-    @foreach (var team in Model)
-    {       
+    @foreach (var team in Model.Teams)
+    {
         <div class="col-md-3">
             <div class="card mb-2">
                 <img class="card-img-top" src="@team.Logo" alt="@team.Name">
@@ -18,3 +34,41 @@
         </div>
     }
 </div>
+
+@{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalCars / AllTeamsQueryModel.TeamsPerPage);
+}
+
+<div class="row mb-5">
+    <div class="col-md-6">
+        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+           asp-controller="Cars"
+           asp-action="All"
+           asp-route-currentPage="@previousPage"
+           asp-route-searchTerm="@Model.SearchTerm"><<</a>
+    </div>
+
+    @{
+        var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+                                     !Model.Teams.Any();
+    }
+
+    <div class="col-md-6">
+        <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
+           asp-controller="Cars"
+           asp-action="All"
+           asp-route-currentPage="@(Model.CurrentPage + 1)"
+           asp-route-searchTerm="@Model.SearchTerm">>></a>
+    </div>
+</div>
+
+@if (!Model.Teams.Any())
+{
+    <h2 class="text-center">No cars found by the given criteria!</h2>
+}
