--- a/CounterStrikeWeb/Views/Players/All.cshtml
+++ b/CounterStrikeWeb/Views/Players/All.cshtml
@@ -34,3 +34,41 @@
         </div>
     }
 </div>
+
+@{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalPlayers / AllPlayersQueryModel.PlayersPerPage);
+}
+
+<div class="row mb-5">
+    <div class="col-md-6">
+        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+           asp-controller="Players"
+           asp-action="All"
+           asp-route-currentPage="@previousPage"
+           asp-route-searchTerm="@Model.SearchTerm">Previous</a>
+    </div>
+
+    @{
+        var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+                                     !Model.Players.Any();
+    }
+
+    <div class="col-md-6">
+        <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
+           asp-controller="Players"
+           asp-action="All"
+           asp-route-currentPage="@(Model.CurrentPage + 1)"
+           asp-route-searchTerm="@Model.SearchTerm">Next</a>
+    </div>
+</div>
+
+@if (!Model.Players.Any())
+{
+    <h2 class="text-center">No teams found!</h2>
+}
