--- a/CounterStrikeWeb/Views/Teams/All.cshtml
+++ b/CounterStrikeWeb/Views/Teams/All.cshtml
@@ -48,10 +48,10 @@
 <div class="row mb-5">
     <div class="col-md-6">
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
-           asp-controller="Cars"
+           asp-controller="Teams"
            asp-action="All"
            asp-route-currentPage="@previousPage"
-           asp-route-searchTerm="@Model.SearchTerm"><<</a>
+           asp-route-searchTerm="@Model.SearchTerm">Previous</a>
     </div>
 
     @{
@@ -61,14 +61,14 @@
 
     <div class="col-md-6">
         <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
-           asp-controller="Cars"
+           asp-controller="Teams"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
-           asp-route-searchTerm="@Model.SearchTerm">>></a>
+           asp-route-searchTerm="@Model.SearchTerm">Next</a>
     </div>
 </div>
 
 @if (!Model.Teams.Any())
 {
-    <h2 class="text-center">No cars found by the given criteria!</h2>
+    <h2 class="text-center">No teams found!</h2>
 }
