Implemented adding player to team

--- a/CounterStrikeWeb/Views/Teams/All.cshtml
+++ b/CounterStrikeWeb/Views/Teams/All.cshtml
@@ -42,7 +42,7 @@
         previousPage = 1;
     }
 
-    var maxPage = Math.Ceiling((double)Model.TotalCars / AllTeamsQueryModel.TeamsPerPage);
+    var maxPage = Math.Ceiling((double)Model.TotalTeams / AllTeamsQueryModel.TeamsPerPage);
 }
 
 <div class="row mb-5">
