--- a/CounterStrikeWeb/Views/Teams/Details.cshtml
+++ b/CounterStrikeWeb/Views/Teams/Details.cshtml
@@ -41,7 +41,7 @@
             }
             <div class="form-group text-center">
                 <div class="button-holder">
-                    <a asp-controller="Teams" asp-action="AddPlayerToTeam" asp-route-id="@Model.Id" class="btn btn-primary btn-block text-uppercase">Add Player</a>
+                    <a asp-controller="Teams" asp-action="FindPlayerToAdd" asp-route-id="@Model.Id" class="btn btn-primary btn-block text-uppercase">Add Player</a>
                 </div>
             </div>
         </div>
