--- a/CounterStrikeWeb/Views/Players/All.cshtml
+++ b/CounterStrikeWeb/Views/Players/All.cshtml
@@ -70,5 +70,5 @@
 
 @if (!Model.Players.Any())
 {
-    <h2 class="text-center">No teams found!</h2>
+    <h2 class="text-center">No players found!</h2>
 }
