--- a/CounterStrikeWeb/Views/Teams/FindPlayerToAdd.cshtml
+++ b/CounterStrikeWeb/Views/Teams/FindPlayerToAdd.cshtml
@@ -69,8 +69,8 @@
 <div class="row mb-5">
     <div class="col-md-6">
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
-           asp-controller="Players"
-           asp-action="All"
+           asp-controller="Teams"
+           asp-action="FindPlayerToAdd"
            asp-route-currentPage="@previousPage"
            asp-route-searchTerm="@Model.SearchTerm">Previous</a>
     </div>
@@ -82,8 +82,8 @@
 
     <div class="col-md-6">
         <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
-           asp-controller="Players"
-           asp-action="All"
+           asp-controller="Teams"
+           asp-action="FindPlayerToAdd"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
            asp-route-searchTerm="@Model.SearchTerm">Next</a>
     </div>
