Implemented adding team to event

--- a/CounterStrikeWeb/Views/Teams/Details.cshtml
+++ b/CounterStrikeWeb/Views/Teams/Details.cshtml
@@ -9,8 +9,8 @@
     <div class="container">
         <h1 style="margin: 2%; text-align: center;">Team</h1>
         <div>
-            <div class="form-group text-center">
-                <img src=@Model.Logo class="img-fluid">
+            <div class="form-group text-center" >
+                <img src=@Model.Logo class="img-fluid" width="500" height="500">
             </div>
             <div class="form-group">
                 <label asp-for="Name">Name</label>
