--- a/CounterStrikeWeb/Views/Events/All.cshtml
+++ b/CounterStrikeWeb/Views/Events/All.cshtml
@@ -16,7 +16,7 @@
             <p class="card-text">@ev.StartOn</p>
             <p class="card-text">Price: @ev.Price</p>
             <p class="card-text">@ev.ParticipantsCount Teams</p>
-            <a asp-controller="Events" asp-action="Details" asp-route-id="@ev.Id" class="btn btn-primary">Add Team</a>
+            <a asp-controller="Events" asp-action="FindTeamToAdd" asp-route-id="@ev.Id" class="btn btn-primary">Add Team</a>
         </div>
     </div>
 }
