--- a/CounterStrikeWeb/Views/Events/FindTeamToAdd.cshtml
+++ b/CounterStrikeWeb/Views/Events/FindTeamToAdd.cshtml
@@ -1,7 +1,7 @@
-﻿@model AddPlayerToTeamViewModel
+﻿@model AddTeamToEventViewModel
 
 @{
-    ViewData["Title"] = "Players";
+    ViewData["Title"] = "Teams";
 }
 
 <form method="get">
@@ -21,14 +21,14 @@
 </form>
 
 <div class="row">
-    @foreach (var player in Model.Players)
+    @foreach (var team in Model.Teams)
     {
         <div class="col-md-3">
             <div class="card mb-2">
-                <img class="card-img-top" src="@player.Picture" alt="@player.Name - @player.Age ">
+                <img class="card-img-top" src="@team.Logo" alt="@team.Name">
                 <div class="card-body text-center">
-                    <h5 class="card-title text-center">@player.InGameName</h5>
-                    <a asp-controller="Teams" asp-action="AddPlayerToTeam" asp-route-playerId="@player.Id" asp-route-teamId="@Model.TeamId" class="btn btn-primary">Add</a>
+                    <h5 class="card-title text-center">@team.Name</h5>
+                    <a asp-controller="Events" asp-action="AddTeamToEvent" asp-route-teamId="@team.Id" asp-route-eventId="@Model.EventId" class="btn btn-primary">Add</a>
                 </div>
             </div>
         </div>
@@ -42,33 +42,33 @@
         previousPage = 1;
     }
 
-    var maxPage = Math.Ceiling((double)Model.TotalPlayers / AddPlayerToTeamViewModel.PlayersPerPage);
+    var maxPage = Math.Ceiling((double)Model.TotalTeams / AddTeamToEventViewModel.TeamsPerPage);
 }
 
 <div class="row mb-5">
     <div class="col-md-6">
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
-           asp-controller="Teams"
-           asp-action="FindPlayerToAdd"
+           asp-controller="Events"
+           asp-action="FindTeamToAdd"
            asp-route-currentPage="@previousPage"
            asp-route-searchTerm="@Model.SearchTerm">Previous</a>
     </div>
 
     @{
         var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
-                                     !Model.Players.Any();
+                                     !Model.Teams.Any();
     }
 
     <div class="col-md-6">
         <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
-           asp-controller="Teams"
-           asp-action="FindPlayerToAdd"
+           asp-controller="Events"
+           asp-action="FindTeamToAdd"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
            asp-route-searchTerm="@Model.SearchTerm">Next</a>
     </div>
 </div>
 
-@if (!Model.Players.Any())
+@if (!Model.Teams.Any())
 {
-    <h2 class="text-center">No players found!</h2>
+    <h2 class="text-center">No teams found!</h2>
 }
