Introduced service layer

--- a/CounterStrikeWeb/Views/Shared/_Layout.cshtml
+++ b/CounterStrikeWeb/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Forum" asp-action="All">Forum</a>
                         </li>
+                        <li class="dropdown">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="Mine">My Players</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
