Fixed player details

--- a/CounterStrikeWeb/Views/Players/Details.cshtml
+++ b/CounterStrikeWeb/Views/Players/Details.cshtml
@@ -17,15 +17,15 @@
                 <input asp-for="Name" readonly class="form-control" value="@Model.Name">
             </div>
             <div class="form-group">
-                <label asp-for="InGameName">Name</label>
+                <label asp-for="InGameName">InGame Name</label>
                 <input asp-for="InGameName" readonly class="form-control" value="@Model.InGameName">
             </div>
             <div class="form-group">
-                <label asp-for="Age">Name</label>
+                <label asp-for="Age">Age</label>
                 <input asp-for="Age" readonly class="form-control" value="@Model.Age">
             </div>
             <div class="form-group">
-                <label asp-for="Country">Name</label>
+                <label asp-for="Country">Country</label>
                 <input asp-for="Country" readonly class="form-control" value="@Model.Country">
             </div>
             @*<div class="form-group">
@@ -37,11 +37,11 @@
                 <input asp-for="TeamLogo" readonly class="form-control" value="@Model.TeamLogo">
             </div>*@
             <div class="form-group">
-                <label asp-for="TwitterUrl">Name</label>
+                <label asp-for="TwitterUrl">Twitter</label>
                 <input asp-for="TwitterUrl" readonly class="form-control" value="@Model.TwitterUrl">
             </div>
             <div class="form-group">
-                <label asp-for="InstagramUrl">Name</label>
+                <label asp-for="InstagramUrl">Instagram</label>
                 <input asp-for="InstagramUrl" readonly class="form-control" value="@Model.InstagramUrl">
             </div>
             <div class="form-group text-center">
