--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using CounterStrikeWeb.Models.Events
 @using CounterStrikeWeb.Models.Match
 @using CounterStrikeWeb.Models.Matches
+@using CounterStrikeWeb.Services.Players
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
