Added administrator role

--- a/CounterStrikeWeb/Views/Players/Edit.cshtml
+++ b/CounterStrikeWeb/Views/Players/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PlayerFormModel
 
 @{
-    ViewData["Title"] = "Add Player";
+    ViewData["Title"] = "Edit Player";
 }
 
 <partial name="_PlayerFormPartial" model="@Model" />
