--- a/CounterStrikeWeb/Views/Players/All.cshtml
+++ b/CounterStrikeWeb/Views/Players/All.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "Players";
-    ViewBag.AllowPlayerEdit = true;
 }
 
 <form method="get">
@@ -30,7 +29,7 @@
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@player.InGameName</h5>
                     <a asp-controller="Players" asp-action="Details" asp-route-id="@player.Id" class="btn btn-primary">View More</a>
-                    @if (ViewBag.AllowPlayerEdit = true)
+                    @if (User.IsAdmin())
                     {
                         <a asp-controller="Players" asp-action="Edit" asp-route-id="@player.Id" class="btn btn-warning">Edit</a>
                         <a asp-controller="Players" asp-action="Delete" asp-route-id="@player.Id" class="btn btn-danger">Delete</a>
