Introduced admin area

--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using CounterStrikeWeb.Models.Match
 @using CounterStrikeWeb.Models.Matches
 @using CounterStrikeWeb.Services.Players
+@using CounterStrikeWeb.Infrastrucure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
