--- a/CounterStrikeWeb/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Views/_ViewImports.cshtml
@@ -5,6 +5,6 @@
 @using CounterStrikeWeb.Models.Events
 @using CounterStrikeWeb.Models.Match
 @using CounterStrikeWeb.Models.Matches
-@using CounterStrikeWeb.Services.Players
+@using CounterStrikeWeb.Services.Players.Models
 @using CounterStrikeWeb.Infrastrucure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
