--- a/CounterStrikeWeb/Views/Match/Details.cshtml
+++ b/CounterStrikeWeb/Views/Match/Details.cshtml
@@ -36,7 +36,7 @@
 
         .right {
             right: 0;
-            background-color: red;
+            background-color: grey;
         }
 
         .centered {
