--- a/CounterStrikeWeb/Views/Teams/All.cshtml
+++ b/CounterStrikeWeb/Views/Teams/All.cshtml
@@ -29,6 +29,11 @@
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@team.Name</h5>
                     <a asp-controller="Teams" asp-action="Details" asp-route-id="@team.Id" class="btn btn-primary">View More</a>
+                    @if (User.IsAdmin())
+                    {
+                        <a asp-controller="Teams" asp-action="Edit" asp-route-id="@team.Id" class="btn btn-warning">Edit</a>
+                        <a asp-controller="Teams" asp-action="Delete" asp-route-id="@team.Id" class="btn btn-danger">Delete</a>
+                    }
                 </div>
             </div>
         </div>
