--- a/CounterStrikeWeb/Views/Match/Add.cshtml
+++ b/CounterStrikeWeb/Views/Match/Add.cshtml
@@ -1,34 +1,11 @@
-﻿@model AddMatchFormModel
+﻿@model MatchFormModel
 
 @{
     ViewData["Title"] = "Add Match";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <h2>Add Match</h2>
+<partial name="_MatchFormPartial" model="@Model" />
 
-            <form method="post">
-                <div class="form-group">
-                    <label asp-for="FirstTeam"></label>
-                    <input asp-for="FirstTeam" class="form-control" placeholder="Na'Vi, G2, etc...">
-                    <span asp-validation-for="FirstTeam" class="small text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="SecondTeam"></label>
-                    <input asp-for="SecondTeam" class="form-control" placeholder="SKADE, Gambit, etc...">
-                    <span asp-validation-for="SecondTeam" class="small text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="StartTime"></label>
-                    <input asp-for="StartTime" class="form-control" placeholder="MMMM dd yyyy">
-                    <span asp-validation-for="StartTime" class="small text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-
-    </div>
-
-</div>
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
