--- a/CounterStrikeWeb/Views/Teams/Add.cshtml
+++ b/CounterStrikeWeb/Views/Teams/Add.cshtml
@@ -1,39 +1,11 @@
-﻿@model AddTeamFormModel
+﻿@model TeamFormModel
 
 @{
     ViewData["Title"] = "Add Team";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <h2>Add Team</h2>
+<partial name="_TeamFormPartial" model="@Model" />
 
-            <form method="post">
-                <div class="form-group">
-                    <label asp-for="Name"></label>
-                    <input asp-for="Name" class="form-control" placeholder="Team Name">
-                    <span asp-validation-for="Name" class="small text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Logo"></label>
-                    <input asp-for="Logo" class="form-control" placeholder="Logo URL">
-                    <span asp-validation-for="Logo" class="small text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="CoachName"></label>
-                    <input asp-for="CoachName" class="form-control" placeholder="B1ad3, maLeK, etc...">
-                    <span asp-validation-for="CoachName" class="small text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Country"></label>
-                    <input asp-for="Country" class="form-control" placeholder="Bulgaria, Brazil, etc...">
-                    <span asp-validation-for="Country" class="small text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-
-    </div>
-
-</div>
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
