--- a/CounterStrikeWeb/Views/Players/All.cshtml
+++ b/CounterStrikeWeb/Views/Players/All.cshtml
@@ -28,7 +28,7 @@
                 <img class="card-img-top" src="@player.Picture" alt="@player.Name - @player.Age ">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@player.InGameName</h5>
-                    <a asp-controller="Players" asp-action="Details" asp-route-id="@player.Id" class="btn btn-primary">View More</a>
+                    <a asp-controller="Players" asp-action="Details" asp-route-id="@player.Id" asp-route-information="@player.InGameName" class="btn btn-primary">View More</a>
                     @if (User.IsAdmin())
                     {
                         <a asp-controller="Players" asp-action="Edit" asp-route-id="@player.Id" class="btn btn-warning">Edit</a>
