Administrator can approve teams

--- a/CounterStrikeWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/CounterStrikeWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using CounterStrikeWeb.Models.Events
 @using CounterStrikeWeb.Models.Match
 @using CounterStrikeWeb.Models.Matches
+@using CounterStrikeWeb.Services.Teams
 @using CounterStrikeWeb.Services.Players.Models
 @using CounterStrikeWeb.Infrastrucure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
