Changed home index view text

--- a/CounterStrikeWeb/Views/Home/Index.cshtml
+++ b/CounterStrikeWeb/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     {
         <div class="jumbotron">
             <h1 class="display-4">Welcome to Counter-Strike Things</h1>
-            <p class="lead">Here you can find everything you need about Counter-Strike</p>
+            <p class="lead">Here you can customize some things in Counter-Strike world</p>
             <hr class="my-4">
             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
